# hydrax

./: .gitignore  README.md  build.sh  docs.sh  mkbuild.sh  pyproject.toml  setup.py  test.py  test.sh
csrc/: trackedbuffer.c
docs/: conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_autosummary/: hydrax.Batch.html  hydrax.BatchTimeoutError.html  hydrax.DataGroup.html  hydrax.Dataloader.html  hydrax.TrainingBatch.html  hydrax.ValidationBatch.html  hydrax.debug_batch_references.html  hydrax.html  hydrax.image.COEFS_FRACTIONAL.html  hydrax.image.COEFS_IMAGENET_SRGB.html  hydrax.image.COEFS_IMAGENET_SRGB_ALPHA.html  hydrax.image.CONVERT_PERCEPTUAL.html  hydrax.image.CONVERT_RELATIVE.html  hydrax.image.Coefs.html  hydrax.image.convert_balanced_to_frac_chw.html  hydrax.image.convert_balanced_to_frac_hwc.html  hydrax.image.convert_frac_to_balanced_chw.html  hydrax.image.convert_frac_to_balanced_hwc.html  hydrax.image.convert_oklab_to_srgb_frac_chw.html  hydrax.image.convert_oklab_to_srgb_frac_hwc.html  hydrax.image.convert_srgb_to_oklab_frac_chw.html  hydrax.image.convert_srgb_to_oklab_frac_hwc.html  hydrax.image.from_srgb_hwc.html  hydrax.image.html  hydrax.image.make_coefs_balanced.html  hydrax.image.make_coefs_balanced_alpha.html  hydrax.image.open_sRGB.html  hydrax.image.open_srgb.html  hydrax.image.write_CHW.html  (+10 more)
hydrax/: __init__.py  _trackedbuffer.pyi  image.py  pandas.py  tqdm.py  trackedbuffer.c
sphinx/: .gitignore  conf.py  index.rst
tests/: .gitignore  test.py  test_image.py  test_pandas.py
(+41 files in other folders)
